--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       width: 120px;
       height: 120px;
       border-radius: 50%;
-      background-image: url('file:///C:/Users/brije/Downloads/WhatsApp%20Image%202025-05-23%20at%2000.12.29_b380e6ef.jpg'); /* Replace with your photo URL */
+      background-image: url('https://raw.githubusercontent.com/Bhavish2007/My-Portfolio/refs/heads/main/profile.jpg'); /* Replace with your photo URL */
       background-size: cover;
       background-position: center;
       margin: 0 auto 1rem;
